# rusty-mandelbrot-service

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs
src/config/: conf.rs  mod.rs
src/routes/: common.rs  gcd.rs  mandelbrot.rs  mod.rs  static_files.rs
src/utils/: complex_parser.rs  coordinate_parser.rs  image_files.rs  mod.rs
