[package]
name = "rusty-mandelbrot-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
num = "0.4.1"
image = "0.24.8"
log = "0.4.20"
env_logger = "0.10"
chrono = "0.4.33"
colorgrad = "0.6.2"
actix-files = "0.6.5"
derive_more = "0.99.17"
